started on adding sogo-integrator to update server

--- a/sogo/defaults.yaml
+++ b/sogo/defaults.yaml
@@ -6,3 +6,12 @@ sogo:
       - id: sogo-connector@inverse.ca
         version: 31.0.2
         url: http://www.sogo.nu/files/downloads/SOGo/Thunderbird/sogo-connector-31.0.2.xpi
+      - id: sogo-integrator@inverse.ca
+        version: 31.0.2
+        url: file:///tmp/sogo-integrator.xpi
+    sogo-integrator:
+      version: 31.0.2
+      updateURL: http://localhost/mozilla-plugins/updates.php
+      preferences:
+        sogo-integrator.autocomplete.server.urlid: public
+        calendar.timezone.local: /mozilla.org/20070129_1/Europe/Berlin
